fix upload dataset spacing/aligment issue, wrong inherit

--- a/app/src/sass/bootstrap/_navs.scss
+++ b/app/src/sass/bootstrap/_navs.scss
@@ -10,7 +10,6 @@
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
   list-style: none;
-  margin-right: 15px !important;
   @include clearfix;
 
   > li {
