--- a/app/src/sass/crn_app/_nav.navbar.scss
+++ b/app/src/sass/crn_app/_nav.navbar.scss
@@ -26,6 +26,10 @@
     height: 50px;
 }
 
+.navbar-collapse.collapse > ul {
+  -webkit-margin-end: 15px;
+}
+
 
 .navbar-default {
     background: $c-33;
